<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_social">
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_save"
            android:title="@string/saved_news" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_configuration">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_close_24"
            android:title="@string/nav_logout" />
    </group>

</menu>