<resources>
    <string name="app_name">COWS</string>

    <string name="ubicacion">Oviedo</string>
    <string name="image_profile_description">Perfil</string>
    <string name="tituloNoticia">Título de la noticia</string>
    <string name="like">Like</string>
    <string name="guardar">Save</string>
    <string name="compartir">Share</string>
    <string name="fuente">Fuente</string>
    <string name="hora">00:00h</string>
    <string name="profile">profile</string>
    <string name="contenidoNoticia">Contenido de la noticia</string>
    <string name="news_fab_description">Leer más</string>
    <string name="image_news_item">Imagen de la noticia</string>

    <!-- Saved news -->
    <string name="saved_news_title">Saved news</string>
    <string name="msg_no_news_saved">You haven\'t saved any news yet :(</string>

    <!-- Errors -->
    <string name="errorLoadingSources">There was an error loading some sources</string>
    <string name="error_connection">There was an error while trying to connect</string>

    <string name="sign_in">Sign In</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menus -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="saved_news">Saved news</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log out</string>
    <string name="error_logging_in">There was an error logging in</string>
    <string name="error_logging_in_google">There was an error logging in with your Google account</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="language">Language</string>

    <!-- Sources -->
    <string name="abc">ABC</string>
    <string name="eldiario">ElDiario</string>
    <string name="elpais">El País</string>
    <string name="lne">La Nueva España</string>
    <string name="settings">Settings</string>
    <string name="msg_no_news">There\'s no news from the selected sources</string>
    <string name="sources">Sources</string>
</resources>